# prithvi_HLS_10BANDS_6CLASS

./: README.md
Prithvi-EO-2.0-main/: README.md  requirements.txt  resample.py
Prithvi-EO-2.0-main/configs/: biomassters.yaml  burnintensity.yaml  firescars.yaml  landslide.yaml  multicrop.yaml  sen1floods11.yaml  sen4map_crops.yaml  sen4map_land-cover.yaml
Prithvi-EO-2.0-main/examples/: example_landslide4sense.ipynb
Prithvi-EO-2.0-main/examples/carbon_flux/: README.md  data_train_hls_37sites_v0_1.csv  download_dataset.py  flux_load_data_vInf3.py  flux_regress.py  fluxconfig_trainer.yaml  main_flux_finetune_baselines_trainer.py  main_flux_finetune_baselines_trainer（4b）.ipynb
granite-wxc-main/: README.md  pyproject.toml
granite-wxc-main/examples/eccc_downscaling/: README.md  compute_scalars.py  preproc.py
granite-wxc-main/examples/eccc_downscaling/notebooks/: eccc_downscaling_finetune.ipynb  eccc_dowscaling_inference.ipynb
granite-wxc-main/examples/merra2_downscaling/notebooks/: merra2_downscaling_inference.ipynb
granite-wxc-main/granitewxc.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
granite-wxc-main/granitewxc/datasets/: eccc.py  merra2.py
granite-wxc-main/granitewxc/models/: eccc_finetune_model.py  loss.py  model.py
granite-wxc-main/granitewxc/utils/: config.py  data.py  eccc_contants.py  eccc_data.py  plot.py  trainer.py
terratorch/: README.md  mkdocs.yml  pyproject.toml  tox.ini
terratorch/docs/: tiling_datamodule_wrapper.md
terratorch/docs/guide/: aed_object_detection.md
terratorch/docs/package/: heads.md
(+88 files in other folders)
